Thu Feb 28 15:29:12 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_getline_fast): scan coderange.

Thu Feb 28 14:36:46 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_enc_str_copy): removed.

Thu Feb 28 13:51:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (stack_check): made flag per threads.

	* thread.c (rb_thread_set_raised, rb_thread_reset_raised): prefixed.

Thu Feb 28 11:43:56 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_flock): immediately returns on EAGAIN if
	  non-blocking.  [ruby-core:15672]

Thu Feb 28 11:23:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_getline_1): get rid of segfault.  [ruby-dev:33938]

Thu Feb 28 11:19:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_reverse_bang): removed unsed variables.

	* include/ruby/encoding.h (rb_str_coderange_scan_restartable): added
	  prototype.

	* string.c (rb_str_coderange_scan_restartable, rb_str_times): removed
	  unsed variables.

	* string.c (rb_str_reverse_bang): ditto

	* string.c (rb_enc_str_copy): unused now.  may be used in future?

Thu Feb 28 03:03:32 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb, ext/tk/lib/*: make default widget set 
	  switchable between Tk (standard Tcl/Tk widget set) and 
	  Ttk (Tile). Initial default widget set is Tk. Now, toplevel 
	  widget classes are removed and defined as aliases. 
	  For example, "TkButton" is an alias of the "Tk::Button" class. 
	  Those aliases are replaced when switching default widget set. 
	  "Tk.default_widget_set=" is the method for switching default 
	  widget set. "Tk.default_widget_set = :Ttk" defines Ttk (Tile) 
	  widget set as default. It means that "TkButton" denotes 
	  "Tk::Tile::Button" class. And then, "TkButton.new" creates 
	  a Tk::Tile::Button widget. Of course, you can back to use 
	  standard Tk widgets as the default widget set by calling 
	  "Tk.default_widget_set = :Tk", whenever you want. Based on 