@@ -1,3 +1,10 @@
+Thu Feb 28 18:07:52 2008  Tanaka Akira  <akr@fsij.org>
+
+	* lib/open-uri.rb (OpenURI::Meta#meta_setup_encoding): setup encoding
+	  by charset.
+	  (OpenURI::Meta#meta_add_field): call meta_setup_encoding when
+	  content-type.
+
 Thu Feb 28 15:29:12 2008  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* io.c (rb_io_getline_fast): scan coderange.
